<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Main!</string>
	<string name="app_name">乐天PDA物业助手</string>
	<string name="login">帐号</string>
	<string name="password">密码</string>
	<string name="login_button">登陆</string>
	<string name="remeber_me">在本机记住我</string>
	<string name="field_should_not_blank">用户名密码不能为空</string>
	<string name="login_notify">登陆中，请稍候...</string>
	<string name="net_work_can_not_be_found">网络不可达，请检查。</string>
	<string name="login_title">登陆</string>
	<string name="baoshi">报事</string>
	<string name="baoshi_title">报事(维修/投诉)</string>
	<string name="chaobiao">抄表</string>
	<string name="renwu">任务</string>
	<string name="shoulou">收楼</string>
	<string name="weixiu">维修</string>
	<string name="baoxiu">报修</string>
	<string name="chaxun">查询</string>
	<string name="zhibiao">指标</string>
	<string name="shenpi">审批</string>
	<string name="test">测试</string>
	<string name="tousu">投诉</string>
	<string name="i_know">我知道了</string>
	<string name="plz_choose_unit">选择单元</string>
	<string name="choose_unit"></string>
	<string name="contact_tel">联系电话</string>
	<string name="contact_person">联系人</string>
	<string name="description">事项说明</string>
	<string name="save">保存</string>
	<string name="delete">删除</string>
	<string name="edit">修改</string>
	<string name="weixiudan_save_error">维修单保存失败</string>
	<string name="weixiudan_save_ok">维修单保存成功</string>
	<string name="weixiudan_delete_ok">维修单删除成功</string>
	<string name="weixiudan_delete_error">维修单删除失败</string>
	<string name="tousudan_delete_ok">投诉单删除成功</string>
	<string name="tousudan_delete_error">投诉单删除失败</string>
	<string name="tousudan_save_error">投诉单保存到数据库失败</string>
	<string name="tousudan_save_ok">投诉单保存到数据库成功</string>
	<string name="choose_loupan_text">选择楼盘</string>
	<string name="choose_louge_text">选择楼阁</string>
	<string name="choose_louceng_text">选择楼层</string>
	<string name="shoulouxiangmu">收楼项目</string>
	<string name="save_to_server">上传</string>

	<string name="clear">取消重选</string>

	<string name="done">选择完成</string>
	<string name="logout">退出</string>
</resources>
