<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/baoshi_new" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:scrollbars="vertical"
	android:background="@drawable/bg">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

		<EditText android:layout_width="fill_parent" android:hint="@string/plz_choose_unit"
			android:layout_height="wrap_content" android:id="@+id/choose_unit_ed"></EditText>

		<EditText android:layout_width="fill_parent" android:hint="@string/contact_tel"
			android:layout_height="wrap_content" android:id="@+id/tel_et"></EditText>

		<EditText android:layout_width="fill_parent" android:hint="@string/contact_person"
			android:layout_height="wrap_content" android:id="@+id/person_et"></EditText>

		<RadioGroup android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<RadioButton android:id="@+id/rb_baoxiu"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/baoxiu" android:checked="true" />
			<RadioButton android:id="@+id/rb_tousu"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/tousu" />
		</RadioGroup>


		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="horizontal"
			android:gravity="center_vertical|center_horizontal">
			<Button android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:id="@+id/take_pic_button"
				android:text="@string/paizhao">
			</Button>

			<ImageView android:src="@drawable/icon" android:id="@+id/pic"
				android:layout_height="fill_parent" android:layout_width="wrap_content"></ImageView>
		</LinearLayout>


		<EditText android:layout_width="fill_parent" android:lines="5"
			android:id="@+id/desc_et" android:hint="@string/description"
			android:layout_height="wrap_content"></EditText>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="horizontal"
			android:gravity="center_vertical|center_horizontal">
			<Button android:layout_width="wrap_content" android:id="@+id/save_button"
				android:layout_height="wrap_content" android:text="保存至本地"></Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>  