<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_marginTop="20dip">
		<TableRow android:gravity="center_vertical|center_horizontal">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<ImageView android:src="@drawable/baoshi"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true" android:id="@+id/baoshi_view"></ImageView>
				<TextView android:text="@string/baoshi"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_alignParentBottom="true" android:id="@+id/baoshi_tv" />
			</LinearLayout>

			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical">
				<ImageView android:src="@drawable/shoulou" android:id="@+id/shoulou_view"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true"></ImageView>
				<TextView android:text="@string/shoulou"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" android:layout_gravity="center_horizontal" />

			</LinearLayout>

			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical">
				<ImageView android:src="@drawable/chaxun" android:id="@+id/chaxun_view"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true"></ImageView>
				<TextView android:text="@string/chaxun"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" android:layout_gravity="center_horizontal" />

			</LinearLayout>


		</TableRow>


		<TableRow android:layout_width="fill_parent"
			android:gravity="center_vertical|center_horizontal"
			android:paddingTop="10dip">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<ImageView android:src="@drawable/chaobiao" android:id="@+id/chaobiao_view"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true"></ImageView>
				<TextView android:text="@string/chaobiao"
					android:layout_gravity="center_horizontal" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/chaobiao_tv"
					android:layout_alignParentBottom="true" />

			</LinearLayout>

			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginLeft="20dip" android:layout_marginRight="20dip">
				<ImageView android:src="@drawable/zhibiao"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true" android:id="@+id/zhibiao_view"></ImageView>
				<TextView android:text="@string/zhibiao"
					android:layout_gravity="center_horizontal" android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" android:id="@+id/zhibiao_tv" />

			</LinearLayout>
			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical">
				<ImageView android:src="@drawable/shenpi"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true" android:id="@+id/shenpi_view"></ImageView>
				<TextView android:text="@string/shenpi"
					android:layout_gravity="center_horizontal" android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" android:id="@+id/shenpi_tv" />

			</LinearLayout>

		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:gravity="center_vertical|center_horizontal"
			android:paddingTop="10dip">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginLeft="20dip" android:layout_marginRight="20dip">
				<ImageView android:src="@drawable/renwu" android:id="@+id/renwu_view"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true"></ImageView>
				<TextView android:text="@string/renwu"
					android:layout_gravity="center_horizontal" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/renwu_tv"
					android:layout_alignParentBottom="true" />

			</LinearLayout>

			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginLeft="20dip" android:layout_marginRight="20dip">
				<ImageView android:src="@drawable/shoulou"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true" android:id="@+id/logout"></ImageView>
				<TextView android:text="@string/logout"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" android:layout_gravity="center_horizontal" />

			</LinearLayout>


			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical">
				<ImageView android:src="@drawable/shoulou"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentTop="true" android:id="@+id/test"></ImageView>
				<TextView android:text="@string/test" android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" android:layout_gravity="center_horizontal" />

			</LinearLayout>


		</TableRow>

	</TableLayout>
</LinearLayout>
