<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:scrollbars="vertical" android:background="@drawable/bg">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

		<EditText android:layout_width="fill_parent" android:hint="@string/plz_choose_unit"
			android:layout_height="wrap_content" android:id="@+id/jiedan_choose_unit_ed"></EditText>

		<EditText android:layout_width="fill_parent" android:hint="@string/contact_tel"
			android:layout_height="wrap_content" android:id="@+id/jiedan_tel_et">
		</EditText>

		<EditText android:layout_width="fill_parent" android:hint="@string/contact_person"
			android:layout_height="wrap_content" android:id="@+id/jiedan_person_et"></EditText>

		<EditText android:layout_width="fill_parent" android:lines="5"
			android:id="@+id/jiedan_desc_et" android:hint="@string/description"
			android:layout_height="wrap_content"></EditText>

		<EditText android:layout_width="fill_parent" android:hint="维修开始时间"
			android:layout_height="wrap_content" android:id="@+id/weixiukaishishijian"></EditText>

		<EditText android:layout_width="fill_parent" android:hint="维修结束时间"
			android:layout_height="wrap_content" android:id="@+id/weixiujieshushijian"></EditText>
		<EditText android:layout_width="fill_parent" android:lines="5"
			android:id="@+id/wanchengqingkuang" android:hint="完成情况"
			android:layout_height="wrap_content"></EditText>
<!-- 
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="horizontal"
			android:gravity="center_vertical|center_horizontal">

			<com.letian.custom_view.DrawView android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:orientation="horizontal"
				android:gravity="center_vertical|center_horizontal" android:id="@+id/draw_view">
			</com.letian.custom_view.DrawView>

		</LinearLayout>
 -->
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="horizontal"
			android:gravity="center_vertical|center_horizontal">
			<Button android:layout_width="wrap_content" android:id="@+id/confirm_accept_button"
				android:layout_height="wrap_content" android:text="确认接单"></Button>
			<Button android:layout_width="wrap_content" android:id="@+id/save_button"
				android:layout_height="wrap_content" android:text="保存"></Button>
			<Button android:layout_width="wrap_content" android:id="@+id/save_to_server_button"
				android:layout_height="wrap_content" android:text="上传"></Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>  