<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal" android:layout_width="fill_parent"
              android:layout_height="fill_parent"
           >
    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:background="@drawable/logo"
                  android:layout_marginLeft="10dip"
                  android:layout_marginTop="100dip"
            >
                  </LinearLayout>

    <LinearLayout android:layout_height="fill_parent"
                  android:layout_width="fill_parent" android:orientation="vertical"
                   android:layout_marginLeft="10dip"
                  android:layout_marginRight="10dip
                  " android:paddingTop="100dip"
                  android:paddingLeft="10dip" android:paddingRight="10dip">
        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="fill_parent" android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:text="@string/login"
                      android:layout_marginRight="20dip" android:textStyle="bold"
                      android:textSize="25dip"></TextView>
            <EditText android:layout_width="fill_parent" android:id="@+id/login"
                      android:layout_height="wrap_content" android:paddingLeft="10dip"></EditText>
        </LinearLayout>


        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:layout_marginTop="30dip"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:text="@string/password"
                      android:layout_marginRight="20dip" android:textStyle="bold"
                      android:textSize="25dip"></TextView>
            <EditText android:layout_width="fill_parent" android:id="@+id/password"
                      android:layout_height="wrap_content" android:inputType="textPassword"
                      android:paddingLeft="10dip"></EditText>
        </LinearLayout>


        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:orientation="horizontal"
                      android:layout_marginTop="10dip"
                      android:gravity="right"
                >
            <Button android:text="@string/login_button"
                    android:layout_width="wrap_content" android:id="@+id/login_button"
                    android:layout_height="wrap_content" layout_alignParentRight="true"
                    android:textStyle="bold" android:textSize="25dip"></Button>


            <Button android:text="@string/setting"
                    android:layout_width="wrap_content" android:id="@+id/setting_button"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dip"
                    layout_alignParentRight="true"
                    android:textStyle="bold" android:textSize="25dip"></Button>



        </LinearLayout>
    </LinearLayout>

</LinearLayout>
